<?xml version="1.0" encoding="utf-8"?>
<!--
   - Copyright 2016 Universidade Federal do Rio Grande do Sul
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:title="@string/library"
        android:key="@string/pref_library_category"
        >

        <EditTextPreference
            android:title="@string/library_user"
            android:key="@string/pref_library_username"
            android:summary="@string/library_user_message"
            android:inputType="number"
            />

        <EditTextPreference
            android:title="@string/password"
            android:key="@string/pref_library_password"
            android:summary="@string/library_password_message"
            android:inputType="textPassword"
            android:password="true"
            />

        <CheckBoxPreference
            android:title="@string/auto_renew"
            android:key="@string/pref_library_autorenew"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/restaurant"
        android:key="@string/pref_restaurant_category"
        >

        <MultiSelectListPreference
            android:dialogTitle="@string/witch_restaurants_to_show"
            android:key="@string/pref_restaurant_list"
            android:summary=""
            android:title="@string/restaurants_to_show"
            android:entries="@array/restaurantArray"
            android:entryValues="@array/restaurantValues"
            android:defaultValue="@array/restaurantValues"
            />

    </PreferenceCategory>

</PreferenceScreen>