<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black_semi_transparent"
    android:id="@+id/login_background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_background"
        android:orientation="vertical"
        android:gravity="center"
        android:transitionName="login_dialog"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="0dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ufrgs_logo"
            />

        <RelativeLayout
            android:id="@+id/login.failed_view"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#EAEAEA"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/ic_error"
                    android:tint="@color/primaryColorDark" />

                <TextView
                    android:id="@+id/login.failed_view.message_label"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/wrong_card_or_password"
                    android:textSize="13dp"
                    android:textColor="#3A3A3A"/>
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login.layout_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <EditText
                android:id="@+id/login.card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/user"
                android:nextFocusForward="@+id/login.password"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#575757"
                android:textSize="17dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login.layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <EditText
                android:id="@+id/login.password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_portal"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#575757"
                android:textSize="17dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login.button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:id="@+id/login.forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="18dp"
            android:textSize="12dp"
            android:textColor="@color/ufrgs.secondaryText"
            android:text="@string/forgot_password_question"
            />

    </LinearLayout>



</LinearLayout>